@@ -1,3 +1,13 @@
+2001-07-10  Mo DeJong  <mdejong@redhat.com>
+
+	* unix/Makefile.in: Add AR and STLIB_LD variables.
+	* unix/configure:
+	* unix/configure.in: Use STLIB_LD when defining MAKE_LIB
+	and MAKE_STUB_LIB. Subst STLIB_LD, RANLIB, and AR.
+	* unix/tcl.m4: Update from Tcl.
+	* win/configure: Regen.
+	* win/tcl.m4: Update from Tcl.
+
 2001-07-06  Mo DeJong  <mdejong@redhat.com>
 
 	* win/configure: Regen.
